# qe

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml
cmake/: add_qe_library.cmake  setup_gurobi.cmake
docs/: contributing.md
src/: .clang-format  CMakeLists.txt
src/base/: CMakeLists.txt  circuit.cpp  circuit.h  pauli.cpp  pauli.h
src/base/tests/: circuit_tests.cpp  pauli_tests.cpp
src/math/: CMakeLists.txt  binary.h  binary_phase.h  format_binary.h  format_binary_phase.h  format_math.h  format_matrix.h  graph.cpp  graph.h  matrix.h
src/math/tests/: binary_phase_tests.cpp  binary_tests.cpp  graph_tests.cpp  matrix_tests.cpp
src/qe-gurobi/: CMakeLists.txt  solve.cpp  solve.h
src/qe-gurobi/tests/: solve_tests.cpp
src/utility/: CMakeLists.txt  string_utility.cpp  string_utility.h
